// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable locale 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "component": "./user/login",
        "key": "/user/login",
        "layout": false,
        "locale": "menu.login",
        "name": "login",
        "path": "/user/login",
        "pro_layout_parentKeys": Array [
          "/user",
        ],
        "routes": null,
      },
    ],
    "key": "/user",
    "layout": false,
    "locale": false,
    "path": "/user",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "welcome",
    "path": "/welcome",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "access": "canAdmin",
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "menu": Object {
      "hideChildren": true,
    },
    "name": "admin",
    "path": "/admin",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "component": "./Welcome",
        "hideInMenu": true,
        "icon": "smile",
        "key": "/admin/sub-page2",
        "locale": "menu.admin.sub-page",
        "name": "sub-page",
        "path": "/admin/sub-page2",
        "pro_layout_parentKeys": Array [
          "/admin2",
        ],
        "routes": null,
      },
    ],
    "component": "./Admin",
    "hideInMenu": true,
    "icon": "crown",
    "key": "/admin2",
    "locale": "menu.admin",
    "name": "admin",
    "path": "/admin2",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "list.table-list",
    "path": "/list",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "component": "./ListTableList",
    "key": "/f615a8ee34f749b5e2b9c01b15d7b54edbcea568f3edc58282585ee1584bef8e",
    "locale": "menu.home",
    "name": "home",
    "path": "/",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
]
`;

exports[`disable locale 2`] = `
Map {
  "/user/login" => Object {
    "component": "./user/login",
    "key": "/user/login",
    "layout": false,
    "locale": "menu.login",
    "name": "login",
    "path": "/user/login",
    "pro_layout_parentKeys": Array [
      "/user",
    ],
    "routes": null,
  },
  "/user" => Object {
    "children": Array [
      Object {
        "component": "./user/login",
        "key": "/user/login",
        "layout": false,
        "locale": "menu.login",
        "name": "login",
        "path": "/user/login",
        "pro_layout_parentKeys": Array [
          "/user",
        ],
        "routes": null,
      },
    ],
    "key": "/user",
    "layout": false,
    "locale": false,
    "path": "/user",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/welcome" => Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "welcome",
    "path": "/welcome",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/admin" => Object {
    "access": "canAdmin",
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "menu": Object {
      "hideChildren": true,
    },
    "name": "admin",
    "path": "/admin",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/admin/sub-page2" => Object {
    "access": "canAdmin",
    "component": "./Welcome",
    "hideInMenu": true,
    "icon": "smile",
    "key": "/admin/sub-page2",
    "locale": "menu.admin.sub-page",
    "name": "sub-page",
    "path": "/admin/sub-page2",
    "pro_layout_parentKeys": Array [
      "/admin2",
    ],
    "routes": null,
  },
  "/admin2" => Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "component": "./Welcome",
        "hideInMenu": true,
        "icon": "smile",
        "key": "/admin/sub-page2",
        "locale": "menu.admin.sub-page",
        "name": "sub-page",
        "path": "/admin/sub-page2",
        "pro_layout_parentKeys": Array [
          "/admin2",
        ],
        "routes": null,
      },
    ],
    "component": "./Admin",
    "hideInMenu": true,
    "icon": "crown",
    "key": "/admin2",
    "locale": "menu.admin",
    "name": "admin",
    "path": "/admin2",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/list" => Object {
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "list.table-list",
    "path": "/list",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/" => Object {
    "component": "./ListTableList",
    "key": "/f615a8ee34f749b5e2b9c01b15d7b54edbcea568f3edc58282585ee1584bef8e",
    "locale": "menu.home",
    "name": "home",
    "path": "/",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
}
`;

exports[`do not start with "/" 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": undefined,
        "key": "/admin/userMng/users",
        "locale": "menu.人员组织管理.人员管理",
        "name": "人员管理",
        "path": "/admin/userMng/users",
        "pro_layout_parentKeys": Array [
          "/admin/userMng/",
        ],
        "routes": null,
      },
      Object {
        "children": undefined,
        "key": "/admin/userMng/companies",
        "locale": "menu.人员组织管理.单位管理",
        "name": "单位管理",
        "path": "/admin/userMng/companies",
        "pro_layout_parentKeys": Array [
          "/admin/userMng/",
        ],
        "routes": null,
      },
    ],
    "key": "/admin/userMng/",
    "locale": "menu.人员组织管理",
    "name": "人员组织管理",
    "path": "/admin/userMng/",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
]
`;

exports[`do not start with "/" 2`] = `
Map {
  "/admin/userMng/users" => Object {
    "key": "/admin/userMng/users",
    "locale": "menu.人员组织管理.人员管理",
    "name": "人员管理",
    "path": "/admin/userMng/users",
    "pro_layout_parentKeys": Array [
      "/admin/userMng/",
    ],
    "routes": null,
  },
  "/admin/userMng/companies" => Object {
    "key": "/admin/userMng/companies",
    "locale": "menu.人员组织管理.单位管理",
    "name": "单位管理",
    "path": "/admin/userMng/companies",
    "pro_layout_parentKeys": Array [
      "/admin/userMng/",
    ],
    "routes": null,
  },
  "/admin/userMng/" => Object {
    "children": Array [
      Object {
        "key": "/admin/userMng/users",
        "locale": "menu.人员组织管理.人员管理",
        "name": "人员管理",
        "path": "/admin/userMng/users",
        "pro_layout_parentKeys": Array [
          "/admin/userMng/",
        ],
        "routes": null,
      },
      Object {
        "key": "/admin/userMng/companies",
        "locale": "menu.人员组织管理.单位管理",
        "name": "单位管理",
        "path": "/admin/userMng/companies",
        "pro_layout_parentKeys": Array [
          "/admin/userMng/",
        ],
        "routes": null,
      },
    ],
    "key": "/admin/userMng/",
    "locale": "menu.人员组织管理",
    "name": "人员组织管理",
    "path": "/admin/userMng/",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
}
`;

exports[`layout Router config with "/" 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": undefined,
        "component": "./Welcome",
        "icon": "smile",
        "key": "https://github.com/ant-design/ant-design-pro-layout/issues",
        "locale": "",
        "name": "site",
        "path": "https://github.com/ant-design/ant-design-pro-layout/issues",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
        "target": "_blank",
      },
      Object {
        "children": undefined,
        "component": "./FlexDemo",
        "icon": "smile",
        "key": "/flex",
        "locale": "menu.flex 布局测试",
        "name": "flex 布局测试",
        "path": "/flex",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
      },
      Object {
        "children": undefined,
        "component": "./DashboardAnalysisTwo",
        "icon": "smile",
        "key": "/dashboardanalysis",
        "locale": "menu.分析页",
        "name": "分析页",
        "path": "/dashboardanalysis",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
      },
      Object {
        "children": undefined,
        "component": "./AccountSettings",
        "icon": "smile",
        "key": "/accountsettings",
        "locale": "menu.个人设置",
        "name": "个人设置",
        "path": "/accountsettings",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
      },
      Object {
        "children": undefined,
        "component": "./FormAdvancedForm",
        "icon": "smile",
        "key": "/formadvancedform",
        "locale": "menu.高级表单",
        "name": "高级表单",
        "path": "/formadvancedform",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
      },
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "component": "./Welcome",
            "icon": "smile",
            "key": "/single/welcome",
            "locale": "menu.Single.two",
            "name": "two",
            "path": "/single/welcome",
            "pro_layout_parentKeys": Array [
              "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
              "/single",
            ],
            "routes": null,
          },
          Object {
            "children": undefined,
            "component": "./Welcome",
            "icon": "smile",
            "key": "/single/welcome2",
            "locale": "menu.Single.two2",
            "name": "two2",
            "path": "/single/welcome2",
            "pro_layout_parentKeys": Array [
              "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
              "/single",
            ],
            "routes": null,
          },
        ],
        "component": "../layouts/BasicLayout",
        "key": "/single",
        "locale": "menu.Single",
        "name": "Single",
        "path": "/single",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": undefined,
                "component": "./Welcome",
                "icon": "smile",
                "key": "/welcome/repertoryFw",
                "locale": "menu.welcome.one.two",
                "name": "two",
                "path": "/welcome/repertoryFw",
                "pro_layout_parentKeys": Array [
                  "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
                  "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
                  "/welcome",
                ],
                "routes": null,
              },
              Object {
                "children": undefined,
                "component": "./Welcome",
                "icon": "smile",
                "key": "/welcome/repertory",
                "locale": "menu.welcome.one.two2",
                "name": "two2",
                "path": "/welcome/repertory",
                "pro_layout_parentKeys": Array [
                  "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
                  "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
                  "/welcome",
                ],
                "routes": null,
              },
            ],
            "component": "./Welcome",
            "key": "/welcome",
            "locale": "menu.welcome.one",
            "name": "one",
            "path": "/welcome",
            "pro_layout_parentKeys": Array [
              "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
              "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
            ],
            "routes": null,
          },
        ],
        "component": "../layouts/BasicLayout",
        "icon": "smile",
        "key": "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
        "locale": "menu.welcome",
        "name": "welcome",
        "path": "/",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
      },
    ],
    "component": "../layouts/BasicLayout",
    "key": "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
    "locale": false,
    "path": "/",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
]
`;

exports[`layout Router config with "/" 2`] = `
Map {
  "https://github.com/ant-design/ant-design-pro-layout/issues" => Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "https://github.com/ant-design/ant-design-pro-layout/issues",
    "locale": "",
    "name": "site",
    "path": "https://github.com/ant-design/ant-design-pro-layout/issues",
    "pro_layout_parentKeys": Array [
      "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
    ],
    "routes": null,
    "target": "_blank",
  },
  "/flex" => Object {
    "component": "./FlexDemo",
    "icon": "smile",
    "key": "/flex",
    "locale": "menu.flex 布局测试",
    "name": "flex 布局测试",
    "path": "/flex",
    "pro_layout_parentKeys": Array [
      "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
    ],
    "routes": null,
  },
  "/dashboardanalysis" => Object {
    "component": "./DashboardAnalysisTwo",
    "icon": "smile",
    "key": "/dashboardanalysis",
    "locale": "menu.分析页",
    "name": "分析页",
    "path": "/dashboardanalysis",
    "pro_layout_parentKeys": Array [
      "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
    ],
    "routes": null,
  },
  "/accountsettings" => Object {
    "component": "./AccountSettings",
    "icon": "smile",
    "key": "/accountsettings",
    "locale": "menu.个人设置",
    "name": "个人设置",
    "path": "/accountsettings",
    "pro_layout_parentKeys": Array [
      "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
    ],
    "routes": null,
  },
  "/formadvancedform" => Object {
    "component": "./FormAdvancedForm",
    "icon": "smile",
    "key": "/formadvancedform",
    "locale": "menu.高级表单",
    "name": "高级表单",
    "path": "/formadvancedform",
    "pro_layout_parentKeys": Array [
      "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
    ],
    "routes": null,
  },
  "/single/welcome" => Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/single/welcome",
    "locale": "menu.Single.two",
    "name": "two",
    "path": "/single/welcome",
    "pro_layout_parentKeys": Array [
      "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
      "/single",
    ],
    "routes": null,
  },
  "/single/welcome2" => Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/single/welcome2",
    "locale": "menu.Single.two2",
    "name": "two2",
    "path": "/single/welcome2",
    "pro_layout_parentKeys": Array [
      "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
      "/single",
    ],
    "routes": null,
  },
  "/single/welcome3/:id?" => Object {
    "component": "./Welcome",
    "hideInMenu": true,
    "icon": "smile",
    "key": "/single/welcome3/:id?",
    "locale": "menu.Single.two3",
    "name": "two3",
    "path": "/single/welcome3/:id?",
    "pro_layout_parentKeys": Array [
      "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
      "/single",
    ],
    "routes": null,
  },
  "/single" => Object {
    "children": Array [
      Object {
        "component": "./Welcome",
        "icon": "smile",
        "key": "/single/welcome",
        "locale": "menu.Single.two",
        "name": "two",
        "path": "/single/welcome",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
          "/single",
        ],
        "routes": null,
      },
      Object {
        "component": "./Welcome",
        "icon": "smile",
        "key": "/single/welcome2",
        "locale": "menu.Single.two2",
        "name": "two2",
        "path": "/single/welcome2",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
          "/single",
        ],
        "routes": null,
      },
      Object {
        "component": "./Welcome",
        "hideInMenu": true,
        "icon": "smile",
        "key": "/single/welcome3/:id?",
        "locale": "menu.Single.two3",
        "name": "two3",
        "path": "/single/welcome3/:id?",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
          "/single",
        ],
        "routes": null,
      },
    ],
    "component": "../layouts/BasicLayout",
    "key": "/single",
    "locale": "menu.Single",
    "name": "Single",
    "path": "/single",
    "pro_layout_parentKeys": Array [
      "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
    ],
    "routes": null,
  },
  "/welcome/repertoryFw" => Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome/repertoryFw",
    "locale": "menu.welcome.one.two",
    "name": "two",
    "path": "/welcome/repertoryFw",
    "pro_layout_parentKeys": Array [
      "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
      "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
      "/welcome",
    ],
    "routes": null,
  },
  "/welcome/repertory" => Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome/repertory",
    "locale": "menu.welcome.one.two2",
    "name": "two2",
    "path": "/welcome/repertory",
    "pro_layout_parentKeys": Array [
      "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
      "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
      "/welcome",
    ],
    "routes": null,
  },
  "/welcome" => Object {
    "children": Array [
      Object {
        "component": "./Welcome",
        "icon": "smile",
        "key": "/welcome/repertoryFw",
        "locale": "menu.welcome.one.two",
        "name": "two",
        "path": "/welcome/repertoryFw",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
          "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
          "/welcome",
        ],
        "routes": null,
      },
      Object {
        "component": "./Welcome",
        "icon": "smile",
        "key": "/welcome/repertory",
        "locale": "menu.welcome.one.two2",
        "name": "two2",
        "path": "/welcome/repertory",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
          "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
          "/welcome",
        ],
        "routes": null,
      },
    ],
    "component": "./Welcome",
    "key": "/welcome",
    "locale": "menu.welcome.one",
    "name": "one",
    "path": "/welcome",
    "pro_layout_parentKeys": Array [
      "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
      "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
    ],
    "routes": null,
  },
  "/" => Object {
    "children": Array [
      Object {
        "component": "./Welcome",
        "icon": "smile",
        "key": "https://github.com/ant-design/ant-design-pro-layout/issues",
        "locale": "",
        "name": "site",
        "path": "https://github.com/ant-design/ant-design-pro-layout/issues",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
        "target": "_blank",
      },
      Object {
        "component": "./FlexDemo",
        "icon": "smile",
        "key": "/flex",
        "locale": "menu.flex 布局测试",
        "name": "flex 布局测试",
        "path": "/flex",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
      },
      Object {
        "component": "./DashboardAnalysisTwo",
        "icon": "smile",
        "key": "/dashboardanalysis",
        "locale": "menu.分析页",
        "name": "分析页",
        "path": "/dashboardanalysis",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
      },
      Object {
        "component": "./AccountSettings",
        "icon": "smile",
        "key": "/accountsettings",
        "locale": "menu.个人设置",
        "name": "个人设置",
        "path": "/accountsettings",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
      },
      Object {
        "component": "./FormAdvancedForm",
        "icon": "smile",
        "key": "/formadvancedform",
        "locale": "menu.高级表单",
        "name": "高级表单",
        "path": "/formadvancedform",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
      },
      Object {
        "children": Array [
          Object {
            "component": "./Welcome",
            "icon": "smile",
            "key": "/single/welcome",
            "locale": "menu.Single.two",
            "name": "two",
            "path": "/single/welcome",
            "pro_layout_parentKeys": Array [
              "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
              "/single",
            ],
            "routes": null,
          },
          Object {
            "component": "./Welcome",
            "icon": "smile",
            "key": "/single/welcome2",
            "locale": "menu.Single.two2",
            "name": "two2",
            "path": "/single/welcome2",
            "pro_layout_parentKeys": Array [
              "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
              "/single",
            ],
            "routes": null,
          },
          Object {
            "component": "./Welcome",
            "hideInMenu": true,
            "icon": "smile",
            "key": "/single/welcome3/:id?",
            "locale": "menu.Single.two3",
            "name": "two3",
            "path": "/single/welcome3/:id?",
            "pro_layout_parentKeys": Array [
              "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
              "/single",
            ],
            "routes": null,
          },
        ],
        "component": "../layouts/BasicLayout",
        "key": "/single",
        "locale": "menu.Single",
        "name": "Single",
        "path": "/single",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "component": "./Welcome",
                "icon": "smile",
                "key": "/welcome/repertoryFw",
                "locale": "menu.welcome.one.two",
                "name": "two",
                "path": "/welcome/repertoryFw",
                "pro_layout_parentKeys": Array [
                  "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
                  "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
                  "/welcome",
                ],
                "routes": null,
              },
              Object {
                "component": "./Welcome",
                "icon": "smile",
                "key": "/welcome/repertory",
                "locale": "menu.welcome.one.two2",
                "name": "two2",
                "path": "/welcome/repertory",
                "pro_layout_parentKeys": Array [
                  "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
                  "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
                  "/welcome",
                ],
                "routes": null,
              },
            ],
            "component": "./Welcome",
            "key": "/welcome",
            "locale": "menu.welcome.one",
            "name": "one",
            "path": "/welcome",
            "pro_layout_parentKeys": Array [
              "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
              "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
            ],
            "routes": null,
          },
        ],
        "component": "../layouts/BasicLayout",
        "icon": "smile",
        "key": "/b330b60f19a36a19fb206c2257c2502721f6803c15c5dd40c89210561a55d54b",
        "locale": "menu.welcome",
        "name": "welcome",
        "path": "/",
        "pro_layout_parentKeys": Array [
          "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
        ],
        "routes": null,
      },
    ],
    "component": "../layouts/BasicLayout",
    "key": "/0444d8c15d130c7d18d025e0439e4adf74c67fe4086bde705431032554af2f71",
    "locale": false,
    "path": "/",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
}
`;

exports[`normal 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": undefined,
        "component": "./user/login",
        "key": "/user/login",
        "layout": false,
        "locale": "menu.login",
        "name": "menu.login",
        "path": "/user/login",
        "pro_layout_parentKeys": Array [
          "/user",
        ],
        "routes": null,
      },
    ],
    "key": "/user",
    "layout": false,
    "locale": false,
    "path": "/user",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "children": undefined,
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "欢迎",
    "path": "/welcome",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "access": "canAdmin",
    "children": undefined,
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "menu": Object {
      "hideChildren": true,
    },
    "name": "管理页",
    "path": "/admin",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "children": undefined,
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "查询表格",
    "path": "/list",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "children": undefined,
    "component": "./ListTableList",
    "key": "/f615a8ee34f749b5e2b9c01b15d7b54edbcea568f3edc58282585ee1584bef8e",
    "locale": "menu.home",
    "name": "menu.home",
    "path": "/",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
]
`;

exports[`normal 2`] = `
Map {
  "/user/login" => Object {
    "component": "./user/login",
    "key": "/user/login",
    "layout": false,
    "locale": "menu.login",
    "name": "menu.login",
    "path": "/user/login",
    "pro_layout_parentKeys": Array [
      "/user",
    ],
    "routes": null,
  },
  "/user" => Object {
    "children": Array [
      Object {
        "component": "./user/login",
        "key": "/user/login",
        "layout": false,
        "locale": "menu.login",
        "name": "menu.login",
        "path": "/user/login",
        "pro_layout_parentKeys": Array [
          "/user",
        ],
        "routes": null,
      },
    ],
    "key": "/user",
    "layout": false,
    "locale": false,
    "path": "/user",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/welcome" => Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "欢迎",
    "path": "/welcome",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/admin" => Object {
    "access": "canAdmin",
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "menu": Object {
      "hideChildren": true,
    },
    "name": "管理页",
    "path": "/admin",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/admin/sub-page2" => Object {
    "access": "canAdmin",
    "component": "./Welcome",
    "hideInMenu": true,
    "icon": "smile",
    "key": "/admin/sub-page2",
    "locale": "menu.admin.sub-page",
    "name": "二级管理页",
    "path": "/admin/sub-page2",
    "pro_layout_parentKeys": Array [
      "/admin2",
    ],
    "routes": null,
  },
  "/admin2" => Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "component": "./Welcome",
        "hideInMenu": true,
        "icon": "smile",
        "key": "/admin/sub-page2",
        "locale": "menu.admin.sub-page",
        "name": "二级管理页",
        "path": "/admin/sub-page2",
        "pro_layout_parentKeys": Array [
          "/admin2",
        ],
        "routes": null,
      },
    ],
    "component": "./Admin",
    "hideInMenu": true,
    "icon": "crown",
    "key": "/admin2",
    "locale": "menu.admin",
    "name": "管理页",
    "path": "/admin2",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/list" => Object {
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "查询表格",
    "path": "/list",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/" => Object {
    "component": "./ListTableList",
    "key": "/f615a8ee34f749b5e2b9c01b15d7b54edbcea568f3edc58282585ee1584bef8e",
    "locale": "menu.home",
    "name": "menu.home",
    "path": "/",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
}
`;

exports[`normal ignoreFilter 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "component": "./user/login",
        "key": "/user/login",
        "layout": false,
        "locale": "menu.login",
        "name": "menu.login",
        "path": "/user/login",
        "pro_layout_parentKeys": Array [
          "/user",
        ],
        "routes": null,
      },
    ],
    "key": "/user",
    "layout": false,
    "locale": false,
    "path": "/user",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "欢迎",
    "path": "/welcome",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "access": "canAdmin",
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "menu": Object {
      "hideChildren": true,
    },
    "name": "管理页",
    "path": "/admin",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "component": "./Welcome",
        "hideInMenu": true,
        "icon": "smile",
        "key": "/admin/sub-page2",
        "locale": "menu.admin.sub-page",
        "name": "二级管理页",
        "path": "/admin/sub-page2",
        "pro_layout_parentKeys": Array [
          "/admin2",
        ],
        "routes": null,
      },
    ],
    "component": "./Admin",
    "hideInMenu": true,
    "icon": "crown",
    "key": "/admin2",
    "locale": "menu.admin",
    "name": "管理页",
    "path": "/admin2",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "查询表格",
    "path": "/list",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  Object {
    "component": "./ListTableList",
    "key": "/f615a8ee34f749b5e2b9c01b15d7b54edbcea568f3edc58282585ee1584bef8e",
    "locale": "menu.home",
    "name": "menu.home",
    "path": "/",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
]
`;

exports[`normal ignoreFilter 2`] = `
Map {
  "/user/login" => Object {
    "component": "./user/login",
    "key": "/user/login",
    "layout": false,
    "locale": "menu.login",
    "name": "menu.login",
    "path": "/user/login",
    "pro_layout_parentKeys": Array [
      "/user",
    ],
    "routes": null,
  },
  "/user" => Object {
    "children": Array [
      Object {
        "component": "./user/login",
        "key": "/user/login",
        "layout": false,
        "locale": "menu.login",
        "name": "menu.login",
        "path": "/user/login",
        "pro_layout_parentKeys": Array [
          "/user",
        ],
        "routes": null,
      },
    ],
    "key": "/user",
    "layout": false,
    "locale": false,
    "path": "/user",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/welcome" => Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "欢迎",
    "path": "/welcome",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/admin" => Object {
    "access": "canAdmin",
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "menu": Object {
      "hideChildren": true,
    },
    "name": "管理页",
    "path": "/admin",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/admin/sub-page2" => Object {
    "access": "canAdmin",
    "component": "./Welcome",
    "hideInMenu": true,
    "icon": "smile",
    "key": "/admin/sub-page2",
    "locale": "menu.admin.sub-page",
    "name": "二级管理页",
    "path": "/admin/sub-page2",
    "pro_layout_parentKeys": Array [
      "/admin2",
    ],
    "routes": null,
  },
  "/admin2" => Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "component": "./Welcome",
        "hideInMenu": true,
        "icon": "smile",
        "key": "/admin/sub-page2",
        "locale": "menu.admin.sub-page",
        "name": "二级管理页",
        "path": "/admin/sub-page2",
        "pro_layout_parentKeys": Array [
          "/admin2",
        ],
        "routes": null,
      },
    ],
    "component": "./Admin",
    "hideInMenu": true,
    "icon": "crown",
    "key": "/admin2",
    "locale": "menu.admin",
    "name": "管理页",
    "path": "/admin2",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/list" => Object {
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "查询表格",
    "path": "/list",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
  "/" => Object {
    "component": "./ListTableList",
    "key": "/f615a8ee34f749b5e2b9c01b15d7b54edbcea568f3edc58282585ee1584bef8e",
    "locale": "menu.home",
    "name": "menu.home",
    "path": "/",
    "pro_layout_parentKeys": Array [],
    "routes": null,
  },
}
`;
